@@ -2,44 +2,81 @@ package ro.upt.etc.licenta.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import ro.upt.etc.licenta.repository.CategoryRepository;
 import ro.upt.etc.licenta.repository.ProductRepository;
 import ro.upt.etc.licenta.repository.SupplierRepository;
+import ro.upt.etc.licenta.repository.dto.CategoryDto;
 import ro.upt.etc.licenta.repository.dto.ProductDTO;
+import ro.upt.etc.licenta.repository.entity.Category;
+import ro.upt.etc.licenta.repository.entity.Image;
 import ro.upt.etc.licenta.repository.entity.Product;
 import ro.upt.etc.licenta.repository.entity.Supplier;
 import ro.upt.etc.licenta.service.ProductService;
 import ro.upt.etc.licenta.service.exception.ResourceNotFoundException;
 
+import java.util.Base64;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ProductServiceImpl implements ProductService {
+    @Autowired
     private final ProductRepository productRepository;
-    private final ModelMapper modelMapper;
+    private final CategoryRepository categoryRepository;
     private final SupplierRepository supplierRepository;
+    private final ModelMapper modelMapper;
+
     @Override
     public List<ProductDTO> getAllProducts() {
         return productRepository.findAll().stream()
-                .map(product -> modelMapper.map(product, ProductDTO.class))
-                .toList();
+                .map(product -> {
+                    ProductDTO productDTO = modelMapper.map(product, ProductDTO.class);
+                    productDTO.setImage(product.getImage() != null ? Base64.getEncoder().encodeToString(product.getImage().getImage()) : null);
+                    return productDTO;
+                })
+                .collect(Collectors.toList());
     }
 
     @Override
     public ProductDTO createProduct(ProductDTO productDTO) {
-        var supplier = Supplier.builder()
-                .name(productDTO.getName())
+//        var supplier = Supplier.builder()
+//                .name(productDTO.getName())
+//                .build();
+//        var supplier = supplierRepository.findById(1L).orElseThrow();
+
+//        Set<Category> categories = productDTO.getCategoryNames().stream()
+//                .map(categoryName -> categoryRepository.findByName(categoryName)
+//                        .orElseThrow(() -> new ResourceNotFoundException("Category not found with name " + categoryName)))
+//                .collect(Collectors.toSet());
+
+        var categorySet = productDTO.getCategories().stream()
+                .map(CategoryDto::getId)
+                .map(Long::valueOf)
+                .map(categoryRepository::findById)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .collect(Collectors.toSet());
+
+        Image image = Image.builder()
+                .image(Base64.getDecoder().decode(productDTO.getImage()))
+                .fileName("product_image")
+                .fileType("image/jpeg")
                 .build();
-        supplier = supplierRepository.save(supplier);
 
         var product = Product.builder()
                 .name(productDTO.getName())
                 .description(productDTO.getDescription())
+                .colour(productDTO.getColour())
                 .price(productDTO.getPrice())
                 .stockQuantity(productDTO.getStockQuantity())
-                .supplier(supplier)
+//                .supplier(supplier)
+                .categories(categorySet)
+                .image(image)
                 .build();
 
         return modelMapper.map(productRepository.save(product), ProductDTO.class);
@@ -75,4 +112,21 @@ public class ProductServiceImpl implements ProductService {
                 .map(product -> modelMapper.map(product, ProductDTO.class))
                 .collect(Collectors.toList());
     }
+
+    @Override
+    public List<Product> getProductsByCategory(Category category) {
+        return productRepository.findByCategories(category);
+    }
+
+//    @Override
+//    public List<ProductDTO> getProductsByCategory(String categoryName) {
+//        var category = categoryRepository.findByName(categoryName)
+//                .orElseThrow(() -> new ResourceNotFoundException("Category not found with name " + categoryName));
+//        return productRepository.findByCategoriesContainingIgnoreCase(Set.of(category)).stream()
+//                .map(prod -> modelMapper.map(prod, ProductDTO.class))
+//                .collect(Collectors.toList());
+//        return category.getProducts().stream()
+//                .map(product -> modelMapper.map(product, ProductDTO.class))
+//                .collect(Collectors.toList());
+//    }
 }
